--- a/menu/style.css
+++ b/menu/style.css
@@ -2,6 +2,7 @@ body{
   margin:0px;
   padding: 0px;
   background-color: #E6E4DE;
+  overflow: hidden;
 }
 
 .home{
